@@ -1,4 +1,4 @@
 django>=1.4
-oauth2
 python-openid
 requests>=1.0.3
+requests-oauthlib>=0.3.0
